maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
        if (getIndication != 9999) {
            ^JediEscaper:26: error: not found: value y
  y = 0
  ^JediEscaper:28: error: not found: value hateurMonde
  for (i <- 1 to hateurMonde) {
                 ^JediEscaper:29: error: not found: value x
    x = 0
    ^JediEscaper:30: error: not found: value x
    if (aBiscuit(x,y)) {
                 ^JediEscaper:30: error: not found: value y
    if (aBiscuit(x,y)) {
                   ^JediEscaper:31: error: not found: value x
      T(0) = x
             ^JediEscaper:32: error: not found: value y
      T(1) = y
             ^JediEscaper:36: error: not found: value x
      x = x+1
      ^JediEscaper:37: error: not found: value x
      if (aBiscuit(x,y)) {
                   ^JediEscaper:37: error: not found: value y
      if (aBiscuit(x,y)) {
                     ^JediEscaper:38: error: not found: value x
        T(0) = x
               ^JediEscaper:39: error: not found: value y
        T(1) = y
               ^JediEscaper:43: error: not found: value y
    y = y+1
    ^JediEscaper:50: error: missing arguments for method aMurNord in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurNord) {
       ^JediEscaper:55: error: missing arguments for method aMurOuest in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurOuest) {
       ^